<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.profil.ProkerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="1. Program Penunjang Urusan Pemerintah Daerah Kabupaten/Kota"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_penunjang_urusan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="12dp"
            android:text="2. Program Peningkatan Daya Tarik Destinasi Pariwisata"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_peningkatan_daya" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="12dp"
            android:text="3. Program Pemasaran Pariwisata"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_pemasaran_pariwisata" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="12dp"
            android:text="4. Program Pengembangan Sumber Daya Pariwisata dan Ekonomi Kreatif"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_pengembangan_sumber_daya" />
    </LinearLayout>


</androidx.core.widget.NestedScrollView>